--- a/manifest.json
+++ b/manifest.json
@@ -26,7 +26,7 @@
       "sizes": "168x168",
       "type": "image/png"
     }, {
-      "src": "icons/logo192",
+      "src": "icons/logo192.png",
       "sizes": "192x192",
       "type": "image/png"
     }, {
